[PE] Invalidate painting layer when transform invertibility changes

PaintLayerPainter::PaintLayerWithAdjustedRoot skips painting of a layer
whose transform is not invertible, so we need to repaint the layer when
invertible status changes.

Bug: 853047
Change-Id: Ie24af4de933336e888065e993e473ab8ed4711a4
Reviewed-on: https://chromium-review.googlesource.com/1105298
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568269}
Former-commit-id: 8b3bc88c89de7ff4382e5cd62eb5368ccb0803dd